// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage should render with danger styles 1`] = `
.circuit-0 {
  color: #DB4D4D;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #DB4D4D;
  width: 3px;
}

<p
  class="circuit-0 circuit-1"
  type="danger"
/>
`;

exports[`InlineMessage should render with default styles 1`] = `
<p
  class="css-42hztf-inline-message circuit-0"
/>
`;

exports[`InlineMessage should render with giga spacing 1`] = `
.circuit-0 {
  color: #DB4D4D;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #DB4D4D;
  width: 3px;
}

<p
  class="circuit-0 circuit-1"
  type="danger"
/>
`;

exports[`InlineMessage should render with success styles 1`] = `
.circuit-0 {
  color: #0F131A;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #47995A;
  width: 3px;
}

<p
  class="circuit-0 circuit-1"
  type="success"
/>
`;

exports[`InlineMessage should render with warning styles 1`] = `
.circuit-0 {
  color: #0F131A;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #D8A413;
  width: 3px;
}

<p
  class="circuit-0 circuit-1"
  type="warning"
/>
`;
